python env: print more details when python --version fails
Summary:
Previously, we'd just print a stock error message.  This diff includes
the message from the exception.  Also, avoid java's string tokenizer
when invoking the version command, since this won't handle spaces in
arguments correctly.

Test Plan: buck test --all